--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- /** |============================ | HEADER |============================ */ -->
     <header class="header">
       <div class="header-flex container">
         <nav class="nav">
@@ -52,7 +53,9 @@
         </address>
       </div>
     </header>
+    <!-- /** |============================ | MAIN |============================ */ -->
     <main class="main">
+      <!-- /** |============================ | HERO |============================ */ -->
       <section class="hero-section">
         <div class="hero container">
           <h1 class="title">Effective Solutions for Your Business</h1>
@@ -60,13 +63,16 @@
           <button class="title-btn" type="button">Order Service</button>
         </div>
       </section>
+
+      <!-- /** |============================ | FEATURES |============================
+      */ -->
       <section class="feature-section">
         <div class="container">
           <h2 class="features-title visually-hidden">Features</h2>
           <ul class="features list">
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64px" height="64px">
                   <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -78,7 +84,7 @@
             </li>
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64px" height="64px">
                   <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -90,7 +96,7 @@
             </li>
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64px" height="64px">
                   <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -102,7 +108,7 @@
             </li>
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64px" height="64px">
                   <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -115,6 +121,8 @@
           </ul>
         </div>
       </section>
+      <!-- /** |============================ | PRODUCTS |============================
+      */ -->
       <section class="products-section">
         <div class="container">
           <h2 class="products-title">What are we doing</h2>
@@ -149,6 +157,7 @@
           </ul>
         </div>
       </section>
+      <!-- /** |============================ | TEAM |============================ */ -->
       <section class="team-cards">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
@@ -167,28 +176,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -210,28 +219,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -253,28 +262,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -296,28 +305,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16px" height="16px">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -328,48 +337,50 @@
           </ul>
         </div>
       </section>
+      <!-- /** |============================ | CUSTOMERS
+      |============================ */ -->
       <section class="customers-section">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo">
+                <svg class="customers-logo" width="104px" height="56px">
                   <use href="./images/icon.svg#icon-customer1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo">
+                <svg class="customers-logo" width="104px" height="56px">
                   <use href="./images/icon.svg#icon-customer2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo">
+                <svg class="customers-logo" width="104px" height="56px">
                   <use href="./images/icon.svg#icon-customer3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo">
+                <svg class="customers-logo" width="104px" height="56px">
                   <use href="./images/icon.svg#icon-customer4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo">
+                <svg class="customers-logo" width="104px" height="56px">
                   <use href="./images/icon.svg#icon-customer5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo">
+                <svg class="customers-logo" width="104px" height="56px">
                   <use href="./images/icon.svg#icon-customer6"></use>
                 </svg>
               </a>
@@ -378,6 +389,7 @@
         </div>
       </section>
     </main>
+    <!-- /** |============================ | FOOTER |============================ */ -->
     <footer class="footer">
       <div class="footer-sections container">
         <div class="footer-info">
@@ -394,28 +406,28 @@
           <ul class="social-list list footer-list">
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
