--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- /** |============================ | HEADER |============================ */ -->
     <header class="header">
       <div class="header-flex container">
         <nav class="nav">
@@ -52,6 +53,7 @@
         </address>
       </div>
     </header>
+    <!-- /** |============================ | MAIN |============================ */ -->
     <main>
       <section class="portfolio">
         <div class="container">
@@ -207,6 +209,7 @@
         </div>
       </section>
     </main>
+    <!-- /** |============================ | FOOTER |============================ */ -->
     <footer class="footer">
       <div class="footer-sections container">
         <div class="footer-info">
@@ -223,28 +226,28 @@
           <ul class="social-list list footer-list">
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16px" height="16px">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
