--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon" width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Strategy</h3>
@@ -85,7 +85,7 @@
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon" width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Punctuality</h3>
@@ -97,7 +97,7 @@
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon" width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Diligence</h3>
@@ -109,7 +109,7 @@
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon" width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Technologies</h3>
@@ -177,28 +177,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -220,28 +220,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -263,28 +263,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -306,28 +306,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -346,42 +346,42 @@
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo" width="104px" height="56px">
-                  <use href="./images/icon.svg#icon-customer1"></use>
+                  <use href="./images/icons.svg#icon-customer1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo" width="104px" height="56px">
-                  <use href="./images/icon.svg#icon-customer2"></use>
+                  <use href="./images/icons.svg#icon-customer2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo" width="104px" height="56px">
-                  <use href="./images/icon.svg#icon-customer3"></use>
+                  <use href="./images/icons.svg#icon-customer3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo" width="104px" height="56px">
-                  <use href="./images/icon.svg#icon-customer4"></use>
+                  <use href="./images/icons.svg#icon-customer4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo" width="104px" height="56px">
-                  <use href="./images/icon.svg#icon-customer5"></use>
+                  <use href="./images/icons.svg#icon-customer5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo" width="104px" height="56px">
-                  <use href="./images/icon.svg#icon-customer6"></use>
+                  <use href="./images/icons.svg#icon-customer6"></use>
                 </svg>
               </a>
             </li>
@@ -407,28 +407,28 @@
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon" width="16px" height="16px">
-                  <use href="./images/icon.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon" width="16px" height="16px">
-                  <use href="./images/icon.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon" width="16px" height="16px">
-                  <use href="./images/icon.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon" width="16px" height="16px">
-                  <use href="./images/icon.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
